<resources>
    <string name="app_name">LoveCalculator</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="resultSpacial">❤️Result❤️</string>
    <string name="results">Result</string>
    <string name="sname">sname</string>
    <string name="fname">fname</string>
    <string name="ready">Готово</string>
    <string name="love_calculator">LOVE CALCULATOR</string>
    <string name="error_retrieving_result">Error retrieving result</string>
    <string name="please_enter_both_names">Please enter both names</string>
    <string name="error_fetching_data">Error fetching data</string>
    <string name="onresponse">onResponse: Ошибка получение данных</string>
    <string name="no_data">No data</string>
    <string name="mistake_not_data">Mistake not data</string>
    <string name="mistake">"Mistake %1$s "</string>
    <string name="history">History</string>
    <string name="history_love">History Love</string>
    <string name="second_names">Second Name</string>
    <string name="first_names">First Name</string>
    <string name="plus">+</string>
    <string name="text_result">Text result</string>
</resources>