<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/first_names"
            android:textColor="@color/neon"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/plus"
            android:textColor="@color/red"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_secondName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/second_names"
            android:textColor="@color/neon"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/results"
            android:textColor="@color/red"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/text_result"
        android:textColor="@color/red"
        android:textSize="12sp" />

</LinearLayout>
