<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_one"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/love_calculator"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/first_name"
        android:padding="12dp"
        android:textColorHint="@color/weak_white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_sname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_name"
        android:padding="12dp"
        android:textColorHint="@color/weak_white"
        android:textSize="24sp" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="1dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/red"
        android:progress="50"
        android:visibility="gone"
        app:trackColor="@color/white"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/pink"
        android:text="@string/ready"
        android:textSize="24sp" />


</LinearLayout>